Fix jdk agent warning (#10111)
Java logs warnings for dynamically loaded agents since JDK 21 ([JEP 451](https://openjdk.org/jeps/451)). This PR adds the byte-buddy-agent to the arg line of the surefire plugin to prevent Mockito from dynamically loading the agent.

Fixes #9971
Refs #10109

Co-authored-by: Steffen Nießing <36885591+zUniQueX@users.noreply.github.com>